# solc-ast-rs-types

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
assets/: schema_02-10-23.json  types_02-10-23.rs
src/: error.rs  lib.rs  macro.rs  types.rs  visit.rs
src/types/: block.rs  contract_definition.rs  enum_definition.rs  error_definition.rs  event_definition.rs  function_definition.rs  identifier_path.rs  import_directive.rs  modifier_definition.rs  override_specifier.rs  parameters_list.rs  pragma_directive.rs  source_location.rs  source_unit.rs  struct_definition.rs  structured_documentation.rs  typename.rs  user_defined_value_type_definition.rs  using_for_directive.rs  variable_declaration.rs  visibility.rs
src/types/block/: expression.rs  statement.rs  yul.rs
src/types/block/expression/: assignment.rs  binary_operation.rs  conditional.rs  elementary_typename.rs  function_call.rs  function_call_options.rs  (+8 more)
src/types/contract_definition/: contract_kind.rs  inheritance_specifier.rs  nodes.rs
src/types/enum_definition/: enum_value.rs
src/types/function_definition/: function_kind.rs  modifier_invocation.rs  state_mutability.rs
src/types/import_directive/: symbol_alias_item.rs
src/types/source_unit/: source_unit_node_type.rs  source_unit_nodes_item.rs
src/types/typename/: array.rs  elementary.rs  function.rs  mapping.rs  user_defined.rs
src/types/using_for_directive/: function_list_item.rs  library_name.rs
src/types/variable_declaration/: mutability.rs  storage_location.rs  type_descriptions.rs
src/visit/: macro.rs  visit_mut.rs
(+42 files in other folders)
