[package]
name = "solc-ast-rs-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["visit", "visit-mut"]
visit = []
visit-mut = []

[dependencies]
regress = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
