[package]
name = "solc-ast-rs-types"
description = "Rust types for the Solidity AST from the solc compiler"
license = "GPL-3.0"
documentation = "https://docs.rs/solc-ast-rs-types"
repository = "https://github.com/0xMemoryGrinder/solc-ast-rs-types"
version = "0.1.5"
edition = "2021"
exclude = ["assets/*", "target/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["visit"]
visit = []
# visit-mut = []

[dependencies]
regress = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
